css/redux.css
html, body {
    margin: 0;
    font-family: Helvetica, sans-serif;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    background: repeating-linear-gradient( to right, #c4ccd6, #c4ccd6 8px, #cbd1d9 5px, #cbd1d9 11px );
}
.display {
    width: 100vw;
    height: 100vh;
    background-size: 100%;
}
.app {
    background: repeating-linear-gradient( to right, #c4ccd6, #c4ccd6 8px, #cbd1d9 5px, #cbd1d9 11px );
    position: relative;
    display: flex;
    flex-direction: column;
    overflow-x: clip;
}
header {
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 100;
    left: 0;
}
.content {
    position: relative;
    z-index: 1;
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    min-height: 92vh;
    margin-top: 90px;
    transition: margin-left 0.5s;
    overflow-y: hidden;
}
/* Status Bar & Content */

.statusbar {
    background-image: linear-gradient(#4f6a8a, #435b7a);
    display: flex;
    flex-direction: row;
    justify-content: center;
    height: 1.8em;
    align-items: center;
    border-bottom: 1px solid #666e71;
    position: relative;
    color: #bbc7d3;
    user-select: none;
    z-index: 5;
}
.statusbar > h3 {
    margin: 0;
}
#carrier {
    left: 5px;
    position: absolute;
}
.wifi {
    left: 3em;
    position: absolute;
}
#battery {
    right: 34px;
    position: absolute;
}
#battery-icon {
    right: 6px;
    top: 3px;
    position: absolute;
}
.wrapper {
    border: 1px solid #9ea2a8;
    border-radius: 15px;
    background: white;
    margin: 14px;
}
/* Banner & Content */
.banner {
    background-image: linear-gradient(#bfcddd, #597496);
    display: flex;
    justify-content: center;
    color: #fafefc;
    text-shadow: 0 -2.25px 0 rgba(0, 0, 0, 0.3);
    border-top: 1px solid #e4f5ff;
    border-bottom: 1px solid #262c30;
    user-select: none;
    position: relative;
    z-index: 5;
    height: 3.5em;
    align-items: center;
}
.banner > div {
    transition: margin-left 0.5s;
}
.banner > h2 {
    margin: 0;
}
.back-nav-filter {
    filter: url(#round);
    position: absolute;
    left: 0;
}
.back-nav {
    position: absolute;
    left: 0.5em;
    height: 3em;
    margin-top: 0.9em;
    background-image: linear-gradient(#9ea9c3, #3b577d);
    color: #fafefc;
    text-shadow: 0 -2.25px 0 rgba(0, 0, 0, 0.3);
    border: none;
    padding: 0 1em 0 1.75em;
    border-radius: 7px;
    box-shadow: inset 0 0 3px #323c48;
    clip-path: polygon(25% 0px, 100% 0px, 100% 100%, 25% 100%, 0px 50.00%);
    width: max-content;
    cursor: pointer;
}
/* List Types */
.list {
    list-style: none;
    margin: 14px 14px 14px 14px;
    padding: 0;
    user-select: none;
}
.list li {
    display: flex;
    align-content: center;
    align-items: center;
    border-bottom: 2px solid #d5d5d5;
    position: relative;
    height: 4.05em;
}
.list li:first-child {
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
}
.list li:last-child {
    border: none;
    border-bottom-left-radius: 10px;
    border-bottom-right-radius: 10px
}
.arrow-list > li:after, .wrapper button:after {
    border: solid #7a7a7a;
    border-width: 0 4px 4px 0;
    display: inline-block;
    padding: 5px;
    content: " ";
    transform: rotate(-45deg);
    position: absolute;
    right: 20px;
}
.icon-list img {
    width: 45px;
    height: 45px;
    margin-right: 15px;
    border-radius: 10px;
    margin-left: 10px;
}
.list li:hover, .wrapper button:hover {
    background-image: linear-gradient(#3088cd, #0164e9);
    color: white;
}
.arrow-list > li:hover:after, .wrapper button:hover:after {
    border: solid white;
    border-width: 0 4px 4px 0;
    display: inline-block;
    padding: 5px;
    content: " ";
    transform: rotate(-45deg);
    position: absolute;
    right: 20px;
}
.content > p {
    display: flex;
    position: relative;
    justify-content: center;
    color: #51586f;
    line-height: 20px;
    text-align: center;
    margin: 5px 14px 5px 14px;
    font-weight: bold;
    user-select: none;
}
/* Inner content size fix */
.content > * {
    width: 90vw;
    margin-left: auto;
    margin-right: auto;
}

Button.settings {
    display: flex;
    align-content: center;
    align-items: center;
    position: relative;
    height: 4.05em;
    cursor: pointer;
    border-radius: 10px;
    justify-content: center;
    margin-top: 14px;
    margin-bottom: 14px;
}

.list > h2:last-child {
    color: #3b5469;
}
.list > li > h2:nth-of-type(2) {
    color: #3b5469;
    font-weight: lighter;
    margin-left: auto;
    margin-right: 45px;
}
.list h3 {
    padding-left: 1em;
}

.list > li > a {
    display: flex;
    text-decoration: none;
    color: unset;
    width: 100%;
    align-items: center;
    cursor: pointer;
}

.settings-header {
    color: #3b577d;
    margin-top: 0;
    margin-bottom: 0;
    font-size: 1.5em;
    text-shadow: 2px 1.5px 0 #e2e4f0b5;
    user-select: none;
}

.icon-list > li.shine::before {
    content: "";
    width: 45px;
    height: 45px;
    background-image: linear-gradient(transparent, white, white);
    position: absolute;
    left: 10px;
    opacity: 30%;
    border-radius: 10px;
    clip-path: ellipse(50px 40px at 50% -35%);
}

.left-image-right-content {
    display: flex;
    padding: 10px;
    user-select: none;
}


.left-image-right-content > img {
    width: 125px;
    height: 125px;
    border-radius: 20px;
    user-select: none;
}

.left-image-right-content > .info {
    display: flex;
    padding: 0 10px;
    flex-direction: column;
}

.left-image-right-content > .info > h2 {
    margin: 0;
    font-size: 1.5em;
    padding-bottom: 5px;
    padding-top: 0;
}

.left-image-right-content > .info > h4 {
    margin: 0;
    padding-top: 0;
    font-size: 1.1em;
    font-weight: normal;
    color: #6c6c6c;
}

.wrapper > p {
    position: relative;
    justify-content: center;
    color: black;
    line-height: 20px;
    margin: 14px;
    font-weight: normal;
    font-size: 1.0em;
    user-select: none;
}

@media screen and (min-width: 500px) {
    .content > * {
        width: 450px !important;
        margin-left: auto !important;
        margin-right: auto !important;
    }
    .left-image-right-content > .info {
        padding: 10px;
    }
    .left-image-right-content > .info > h2 {
        padding-top: 5px;
    }

    .left-image-right-content > .info > h4 {
        padding-top: 4px;
    }
}

.left {
    position: absolute;
    margin-left: -200vw;
}

.right {
    position: absolute;
    margin-left: 200vw;
}

.wrapper button {
    position: relative;
    height: 3em;
    width: 100%;
    background: none;
    border: none;
    border-top: 2px solid #d5d5d5;
    font-weight: bold;
    font-size: 1.2em;
    display: flex;
    align-items: center;
    padding-left: 1em;
    cursor: pointer;
    border-radius: 0 0 10px 10px;
}

.wrapper > a {
    text-decoration: none;
}

